namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-community-accommodation-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-community-accommodation-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "community-accommodation-service-tier-3-team"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/application: "Community Accommodation"
    cloud-platform.justice.gov.uk/owner: "Community Accommodation: casdev@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: >-
      https://github.com/ministryofjustice/hmpps-approved-premises-ui.git,
      https://github.com/ministryofjustice/hmpps-temporary-accommodation-ui.git,
      https://github.com/ministryofjustice/hmpps-approved-premises-api.git,
      https://github.com/ministryofjustice/hmpps-community-accommodation-tier-2-ui,
      https://github.com/ministryofjustice/hmpps-community-accommodation-tier-2-bail-ui,
      https://github.com/ministryofjustice/hmpps-single-accommodation-service-api,
      https://github.com/ministryofjustice/hmpps-single-accommodation-service-ui
    cloud-platform.justice.gov.uk/team-name: "hmpps-community-accommodation"
